tests/valid_programs/strings/fmt_string2.duck
fn main() {
    let x: String = f"hello i'm an f string";
    std::io::println(x);
}
