tests/errors/require_string_literal_give_int.duck
fn main() {
    let str: "const string" = 1;
}
